--- a/.pages.yml
+++ b/.pages.yml
@@ -13,7 +13,7 @@ content:
     fields:
       - { name: title, label: Title, type: string, required: true }
       - { name: slug, label: Slug, type: string, required: true }
-      - { name: type, label: Type, type: string, required: true, default: docs }
+      - { name: type, label: Type, type: select, required: true, options: { values: [docs] } }
       - name: body
         label: Body
         type: rich-text
