Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -9,7 +9,7 @@ content:
     path: content
     filename: "{primary}.md"
     view:
-      fields: [ title, slug ]
+      fields: [ title ]
     fields:
       - { name: title, label: Title, type: string, required: true }
       - { name: type, label: Type, type: select, required: true, options: { values: [docs] }, default: docs }
