--- a/.pages.yml
+++ b/.pages.yml
@@ -13,9 +13,26 @@ content:
     fields:
       - { name: title, label: Title, type: string, required: true }
       - { name: type, label: Type, type: select, required: true, options: { values: [docs] }, default: docs }
+      #- name: body
+      #  label: Body
+      #  type: rich-text
       - name: body
         label: Body
-        type: rich-text
+        type: block
+        list: true
+        blockKey: type # Optional: customize the key used to store the block name, defaults to `_block`
+        blocks:
+          # Each item defines a possible block structure the user can select.
+          # These typically use 'component' or define 'fields' directly.
+          - name: alt-image
+            label: Add ALT image
+            component: alt-image # Assumes a 'hero' component is defined and that its type is `object`
+          - name: text
+            label: Add Text Block
+            fields:
+              - name: content
+                label: Text Content
+                type: rich-text
 components:
   alt-image:
     label: Image with ALT text
