--- a/.pages.yml
+++ b/.pages.yml
@@ -16,7 +16,7 @@ content:
       #- name: body
       #  label: Body
       #  type: rich-text
-      - name: body
+      - name: blocks
         label: Body
         type: block
         list: true
@@ -25,8 +25,11 @@ content:
           # Each item defines a possible block structure the user can select.
           # These typically use 'component' or define 'fields' directly.
           - name: alt-image
-            label: Add ALT image
-            component: alt-image # Assumes a 'hero' component is defined and that its type is `object`
+            label: Add Local Image
+            component: alt-image
+          - name: remote-image
+            label: Add Remote Image
+            component: remote-image
           - name: text
             label: Add Text Block
             fields:
@@ -35,12 +38,22 @@ content:
                 type: rich-text
 components:
   alt-image:
-    label: Image with ALT text
+    label: Image
     type: object
     fields:
       - name: src
         label: Image
         type: image
+      - name: alt
+        label: ALT text
+        type: string
+  remote-image:
+    label: Remote image
+    type: object
+    fields:
+      - name: src
+        label: Image
+        type: string
       - name: alt
         label: ALT text
         type: string
