Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -36,6 +36,9 @@ content:
               - name: content
                 label: Text Content
                 type: rich-text
+          - name: callout
+            label: Add Callout
+            component: callout
 components:
   alt-image:
     label: Image
