--- a/.pages.yml
+++ b/.pages.yml
@@ -66,7 +66,7 @@ components:
     fields:
       - name: type
         label: Type
-        default: default
+        #default: default
         type: select
         options:
           values: [default, info, warning, error]
