--- a/.pages.yml
+++ b/.pages.yml
@@ -20,7 +20,7 @@ content:
         label: Body
         type: block
         list: true
-        #blockKey: type # Optional: customize the key used to store the block name, defaults to `_block`
+        blockKey: _type # Optional: customize the key used to store the block name, defaults to `_block`
         blocks:
           # Each item defines a possible block structure the user can select.
           # These typically use 'component' or define 'fields' directly.
@@ -66,7 +66,7 @@ components:
     fields:
       - name: type
         label: Type
-        #default: default
+        default: default
         type: select
         options:
           values: [default, info, warning, error]
