Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -74,6 +74,4 @@ components:
         type: select
         options:
           values: [default, info, warning, error]
-      - name: text
-        label: Text
-        component: markdown
+      - component: markdown
