Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -24,7 +24,7 @@ content:
         blocks:
           # Each item defines a possible block structure the user can select.
           # These typically use 'component' or define 'fields' directly.
-          - name: alt-image
+          - name: local-image
             label: Add Local Image
             component: alt-image
           - name: remote-image
@@ -44,7 +44,7 @@ components:
       - name: value
         label: Text Content
         type: rich-text
-  alt-image:
+  local-image:
     label: Image
     type: object
     fields:
