--- a/.pages.yml
+++ b/.pages.yml
@@ -17,26 +17,29 @@ content:
       #  label: Body
       #  type: rich-text
       - name: blocks
-        label: Body
-        type: block
-        list: true
-        blockKey: _type # Optional: customize the key used to store the block name, defaults to `_block`
-        blocks:
-          # Each item defines a possible block structure the user can select.
-          # These typically use 'component' or define 'fields' directly.
-          - name: local-image
-            label: Add Local Image
-            component: alt-image
-          - name: remote-image
-            label: Add Remote Image
-            component: remote-image
-          - name: text
-            label: Add Text Block
-            component: markdown
-          - name: callout
-            label: Add Callout
-            component: callout
+        component: any-block
+        
 components:
+  any-block:
+    label: Body
+    type: block
+    list: true
+    blockKey: _type # Optional: customize the key used to store the block name, defaults to `_block`
+    blocks:
+      # Each item defines a possible block structure the user can select.
+      # These typically use 'component' or define 'fields' directly.
+      - name: local-image
+        label: Add Local Image
+        component: alt-image
+      - name: remote-image
+        label: Add Remote Image
+        component: remote-image
+      - name: text
+        label: Add Text Block
+        component: markdown
+      - name: callout
+        label: Add Callout
+        component: callout
   markdown:
     label: Markdown
     type: object
@@ -77,3 +80,15 @@ components:
       - name: value
         label: Text Content
         type: rich-text
+  cards:
+    label: Cards
+    type: object
+    fields:
+      - name: Card
+        component: card
+  card:
+    label: Card
+    type: object
+    fields:
+      - name: value
+        component: 
