--- a/.pages.yml
+++ b/.pages.yml
@@ -30,7 +30,7 @@ components:
       # These typically use 'component' or define 'fields' directly.
       - name: local-image
         label: Add Local Image
-        component: alt-image
+        component: local-image
       - name: remote-image
         label: Add Remote Image
         component: remote-image
@@ -51,7 +51,7 @@ components:
     blocks:
       - name: local-image
         label: Add Local Image
-        component: alt-image
+        component: local-image
       - name: remote-image
         label: Add Remote Image
         component: remote-image
@@ -101,8 +101,6 @@ components:
     list: true
     blockKey: _cards
     blocks:
-      - name: bingle-bongle
-        component: markdown
       - name: card
         label: Add Card
         component: card
