--- a/.pages.yml
+++ b/.pages.yml
@@ -12,7 +12,7 @@ content:
       fields: [ title ]
     fields:
       - { name: title, label: Title, type: string, required: true }
-      - { name: type, label: Type, type: select, required: true, options: { values: [docs] }, default: docs }
+      - { name: type, label: Type, type: select, required: true, options: { values: [docs, cms] }, default: cms, hidden: true }
       #- name: body
       #  label: Body
       #  type: rich-text
@@ -113,3 +113,7 @@ components:
         type: string
       #- name: image
       #  component: any-image
+
+settings: 
+  content: 
+    merge: true
