--- a/.pages.yml
+++ b/.pages.yml
@@ -97,8 +97,12 @@ components:
         type: rich-text
   cards:
     label: Cards
+    type: object
     list: true
-    component: card
+    fields:
+      - name: title
+        label: Title
+        type: string
   card:
     label: Card
     type: object
