Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -27,7 +27,7 @@ components:
     type: block
     list:
       collapsible:
-        summary: "{title} ({index})"
+        summary: "{fields.fieldName} ({index})"
     blockKey: _type # Optional: customize the key used to store the block name, defaults to `_block`
     blocks:
       # Each item defines a possible block structure the user can select.
