--- a/.pages.yml
+++ b/.pages.yml
@@ -22,7 +22,7 @@ components:
     type: block
     list:
       collapsible:
-        summary: "{fields.name} ({index})"
+        summary: "{name} ({index})"
     blockKey: _type # Optional: customize the key used to store the block name, defaults to `_block`
     blocks:
       # Each item defines a possible block structure the user can select.
