--- a/.pages.yml
+++ b/.pages.yml
@@ -123,7 +123,7 @@ components:
       - name: value
         label: Text Content
         type: rich-text
-        default: |
+        default: |-
           ### Step 1
           
           ...
