--- a/.pages.yml
+++ b/.pages.yml
@@ -124,8 +124,8 @@ components:
         label: Text Content
         type: rich-text
         default: |
-          ### Step 1
+          ### Step 1\n
           ...
-          ### Step 2
+          ### Step 2\n
           ...
-          ### Step 3
+          ### Step 3\n
