--- a/.pages.yml
+++ b/.pages.yml
@@ -123,5 +123,4 @@ components:
       - name: value
         label: Text Content
         type: rich-text
-        default: |
-          ### Step 1
+        default: ### Step 1
