--- a/hugo.yaml
+++ b/hugo.yaml
@@ -60,6 +60,6 @@ params:
 
     giscus:
       repo: amblelabs/stargate-wiki
-      repoId: R_kgDOML5FAA
+      repoId: R_kgDOPBVhNA
       category: General
-      categoryId: DIC_kwDOML5FAM4CgOE1
+      categoryId: DIC_kwDOPBVhNM4CuUas
