--- a/.pages.yml
+++ b/.pages.yml
@@ -16,8 +16,11 @@ content:
       - name: blocks
         component: any-block
       - name: body
-        type: string
+        type: text
         default: "<!-- DO NOT EDIT THIS -->"
+        options:
+          rows: 10
+          autoresize: false
         
 components:
   any-block:
