--- a/.pages.yml
+++ b/.pages.yml
@@ -28,7 +28,7 @@ components:
     type: block
     list:
       collapsible:
-        summary: "#{index}"
+        summary: "${fields._name}@{index}"
     blockKey: _type # Optional: customize the key used to store the block name, defaults to `_block`
     blocks:
       # Each item defines a possible block structure the user can select.
@@ -70,6 +70,9 @@ components:
     label: Markdown
     type: object
     fields:
+      - name: _name
+        label: Name
+        type: string
       - name: value
         label: Text Content
         type: rich-text
