--- a/.pages.yml
+++ b/.pages.yml
@@ -28,7 +28,7 @@ components:
     type: block
     list:
       collapsible:
-        summary: "{fields._name}@{index}"
+        summary: "{index}: {fields._name}"
     blockKey: _type # Optional: customize the key used to store the block name, defaults to `_block`
     blocks:
       # Each item defines a possible block structure the user can select.
