--- a/.pages.yml
+++ b/.pages.yml
@@ -19,18 +19,15 @@ content:
         label: Plain Body
         description: Do NOT use. This exists only for the sole purpose of editing old (pre-CMS) wiki content.
         type: rich-text
-        
 components:
   any-block:
     label: Body
     type: block
     list:
       collapsible:
-        summary: "{index}: {fields.alt}"
-    blockKey: _type # Optional: customize the key used to store the block name, defaults to `_block`
+        summary: "{index}: {fields.alt}{fields.title}"
+    blockKey: _type
     blocks:
-      # Each item defines a possible block structure the user can select.
-      # These typically use 'component' or define 'fields' directly.
       - name: local-image
         label: Add Local Image
         component: local-image
@@ -46,6 +43,9 @@ components:
       - name: card
         label: Add Card
         component: card
+      - name: cards
+        label: Add Card Group
+        component: cards
       - name: steps
         label: Add Steps
         component: steps
@@ -111,8 +111,21 @@ components:
         type: rich-text
   cards:
     label: Cards
-    component: card
-    list: true
+    type: object
+    fields:
+      - name: alt
+        type: string
+        default: Card Group
+        hidden: true
+      - name: cols
+        type: number
+        label: Columns
+        default: 3
+        options:
+          min: 1
+      - name: value
+        component: card
+        list: true
   card:
     label: Card
     type: object
