Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -2,6 +2,9 @@ media:
   input: content
   output: /stargate-wiki
   categories: [image]
+settings:
+  content:
+    merge: true
 content:
   - name: wiki
     label: Wiki
